--- a/#src/scss/about.scss
+++ b/#src/scss/about.scss
@@ -3,6 +3,12 @@
 	padding: 130px 0 158px 0;
 }
 
+@media (max-width: 767px) {
+	.about {       
+		padding: 33px 0 59px 0;
+    }
+}
+
 .about__title {
 	display: flex;
 	justify-content: center;
@@ -30,19 +36,26 @@
 	text-align: center;
 	text-transform: uppercase;
 }
+
 .about__row {
 	display: flex;
 	padding: 0 40px 0 80px;
 }
+
 .about__row-image {
-	width: calc(50.00%);
-	max-width: 100%;
-	max-height: 100%;
+	width: calc(50.00%);	
 }
+
+.about__row-image img {
+	max-width: 100%;
+}
+
 .about__row-text {
 	width: calc(50.00% - 15px);
 }
+
 .about__row-text-article { }
+
 .about__row-text-article-title {
 	font-size: calc(14px + 6 * ((100vw - 320px) / (1440 - 320)));;
 	letter-spacing: 1px;
@@ -54,6 +67,7 @@
 
 	margin-bottom: 25px;
 }
+
 .about__row-text-article-text {	
 	font-size: calc(12px + 4 * ((100vw - 320px) / (1440 - 320)));;
 	letter-spacing: 1px;
