--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,32 +1,27 @@
 .header {
 	background-color: #eff0f2;
-	padding: 63px 0 129px 0;
+	position: relative;
+}
+
+.header__container {
+	display: flex;
+	flex-direction: column;
+	min-height: 805px;
+	padding-top: 63px;
+	padding-bottom: 63px;
 }
 
 @media (max-width: 767px) {
-	.header {       
-		padding: 33px 0 59px 0;
+	.header__container {
+		padding-top: 30px;
+		padding-bottom: 55px;
     }
 }
-
-// .header__logo {
-// 	border: 5.54px solid #170f1c;
-// 	max-width: 113px;
-// 	font-size: 17px;
-// 	letter-spacing: 1px;
-// 	line-height: 28px;
-// 	color: #000000;
-// 	font-weight: 700;
-// 	text-transform: uppercase;
-// 	font-family: $Mons;
-// 	text-align: center;
-// 	filter: drop-shadow(0 0 1px rgba(21,21,22,0.75))
-// }
 
 .header__logo {
 	display: flex;
 	justify-content: flex-start;
-	margin-bottom: 206px;
+	margin-bottom: 65px;
 	width: 100%;
 }
 
@@ -42,30 +37,33 @@
     }
 }
 
-.blue-mark {
+.header__content {
+	z-index: 2;
+	position: relative;
+	margin: auto 0;
+}
+
+.header__title-mark {
 	background-color: $blue;
+	padding: 0 10px;
+	margin: 0 -5px;
 }
 
 .header__title {
-	display: flex;
 	font-size: 45px;
 	font-size: calc(30px + 15 * ((100vw - 320px) / (1440 - 320)));
 	letter-spacing: 3px;
-	line-height: 32px;
+	line-height: 60px;
 	
 	color: #505050;
 	font-weight: 700;
 	font-family: $Mons;
 	text-align: center;
 	text-transform: uppercase;
-	filter: drop-shadow(3.517px 8.285px 5px rgba(0,0,0,0.24));
+	text-shadow: 3.517px 8.285px 5px rgba(0,0,0,0.24);
 
 	margin-bottom: 25px;
-	align-items: center;
-	justify-content: center;
 }
-
-
 
 .header__btn {
 	display: flex;
@@ -83,7 +81,6 @@
 @media (max-width: 767px) {
 	.header__btn {       
 		margin-top: 50px;
-		// justify-content: flex-start;
 	}
 	.header__title {		
 		margin-bottom: 15px;
@@ -96,11 +93,6 @@
     }
 }
 
-// .header__btn:hover > .header__btn-contact {
-// 	transition: 0.2s;
-// 	transform: scale(1.1);
-// }
-
 .header__btn-contact {
 	padding: 20px 48px;
 	border-radius: 2px;
@@ -111,12 +103,13 @@
 	color: #3c3c3d;
 	text-transform: uppercase;
 	font-family: $Mons;
-	
+	transition: .2s;	
 }
 
-// .header__btn-contact:hover {
-	
-// }
+.header__btn-contact:hover {
+	background: #fff;
+    color: #214744;
+}
 
 @media (max-width: 767px) {
 	.header__btn-contact {
@@ -132,27 +125,15 @@
     }
 }
 
-.header__img {
-	display: flex;
-	justify-content: flex-end;	
-	margin: -60px 66px 0 auto;
+.header__decor {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: 180px 0 0 390px;
 }
 
-.header__img-inner {
-	width: 100%;
-	min-width: 195px;	
-	height: 100%;
-}
-
-img {
-	width: 100%;	
-	height: 100%;
-	object-fit: cover;
-}
-
-@media (max-width: 767px) {
-	.header__img {		
-		margin: -25px 0 0 auto;
-	}
+.header__decor-img {
+	max-width: 100px;	
+	max-height: 100px;	
 }
 
