--- a/#src/scss/message.scss
+++ b/#src/scss/message.scss
@@ -3,58 +3,70 @@
     padding: 120px 0;
 }
 
-.message__row {
+.message__grid {
     display: flex;
+    flex-wrap: wrap;
+    margin: -13px;
 }
 
-.message__row-column {
-    background-color: #4a5862;
-    padding: 33px 33px 20px 33px;
-    margin-right: 25px;
-    flex: 2 1 auto;
-    opacity: 0.9;
+.message__cell {
+    padding: 13px;
+    flex: 0 0 auto;
+    display: flex;
+    align-items: stretch;
 }
 
-.message__row-column:last-child {
-    margin-right: 0px;
-    flex: 1 1 auto;
-
+.message__cell--form {
+    width: 60%;
 }
 
-.message__row-form-inner {
-    
+.message__cell--info {
+    width: 40%;
 }
 
-.message__row-form-inner-body {
-
+.message__box {
+    background-color: rgba(2, 22, 35, .71);
+    padding: 33px;
+    width: 100%;
 }
 
-.message__row-form-inner-line {
+.message__form-row {
+    margin-bottom: 15px;
+}
+
+.message__input {
+    display: block;
+    width: 100%;
     color: #b1babf;
     font-size: 15px;
     line-height: 51px;
     font-family: $Rale;
-    background-color: #4a5862;
+    background: transparent;
     border-bottom: 1px solid #b1babf;
-    
+    transition: .2s;
 }
 
-.input { 
-    // display: flex;
-    // align-items: center;
-    background-color: #4a5862;    
-    color: #b1babf;
+.message__input--textarea {
+    resize: none;
 }
 
-.message__row-form-inner-button {
-    margin: 38px 0px 17px 0px;
-    background-color: #6eeee4;   
-    padding: 20px 36px;
-    max-width: 245px;
-    opacity: 1;
+.message__input::placeholder {
+    color: #fff;
+    opacity: .6;
+    font-size: 15px;
+    font-family: $Rale;
+    font-weight: 300;
 }
 
-.message__row-form-inner__btn {
+.message__input:focus {
+    border-bottom: 1px solid #fff;
+}
+
+.message__form-actions {
+    margin: 38px 0px 0 0px;
+}
+
+.message__form-button {
     background-color: #6eeee4;
     text-transform: uppercase;
     font-size: 18px;
@@ -62,6 +74,20 @@
     line-height: 28px;
     color: #214744;
     font-family: $Mons;
+    background-color: #6eeee4;   
+    padding: 20px 36px;
+    max-width: 245px;
+    transition: .2s;
+}
+
+.message__form-button:hover {
+    background: #fff;
+    color: #214744;
+}
+
+.message__form-button:active {
+    background: #214744;
+    color: #fff;
 }
 
 .message__row-map-attr {
@@ -81,16 +107,23 @@
     padding-top: 30px;
     max-height: 300%;
 }
-  
-// .map {
-//     width: 100%;
-//     height: 500px;
-// }
 
+@media (max-width: 1023px) {
+    .message__grid {
+        margin: -10px;
+    }
 
+    .message__cell {
+        padding: 10px;
+    }
 
-.img-text{
-display: none;
+    .message__box {
+        padding: 20px;
+    }
 }
 
-  
+@media (max-width: 767px) {
+    .message__cell {
+        width: 100%;
+    }
+}
