--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -20,15 +20,15 @@ $blue: #b2f2ee;
 }
 
 .container {
-	max-width: 1440px;
+	max-width: 1220px;
 	margin: 0 auto;
-	padding: 0 149px;
+	padding: 0 40px;
 	width: 100%;
 }
 
 @media (max-width:1019px) {
 	.container {       
-        padding: 0 69px;
+        padding: 0 20gpx;
     }
 }
 
@@ -38,10 +38,32 @@ $blue: #b2f2ee;
     }
 }
 
+.top-block__title {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 17px;
 
-.btn_active:active {
-	transform: scale(0.9);
-	box-shadow: none;
+	font-size: calc(24px + 14 * ((100vw - 320px) / (1440 - 320)));
+	letter-spacing: 2px;
+	line-height: 28px;
+	color: #181919;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-family: $Mons;
+}
+
+.top-block__text {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 139px;
+
+	font-size: calc(14px + 4 * ((100vw - 320px) / (1440 - 320)));;
+	letter-spacing: 1px;
+	line-height: 28px;
+	color: #5e5f5f;
+	font-family: $Merri;
+	text-align: center;
+	text-transform: uppercase;
 }
 
 a {
