--- a/#src/scss/message.scss
+++ b/#src/scss/message.scss
@@ -83,6 +83,7 @@
 .message__form-button:hover {
     background: #fff;
     color: #214744;
+    transition: .2s;
 }
 
 .message__form-button:active {
