feaded team responsive

--- a/#src/scss/message.scss
+++ b/#src/scss/message.scss
@@ -76,7 +76,7 @@
     font-family: $Mons;
     background-color: #6eeee4;   
     padding: 20px 36px;
-    max-width: 245px;
+    // max-width: 245px;
     transition: .2s;
 }
 
