--- a/#src/scss/about.scss
+++ b/#src/scss/about.scss
@@ -29,24 +29,70 @@
 .about__row-text-article { }
 
 .about__row-text-article-title {
-	font-size: calc(14px + 6 * ((100vw - 320px) / (1440 - 320)));;
+	font-size: calc(12px + 8 * ((100vw - 320px) / (1440 - 320)));
 	letter-spacing: 1px;
 	line-height: 28px;
 	color: #3e3f3f;
 	font-weight: 700;
 	font-family: $Merri;
 	text-transform: uppercase;
-
 	margin-bottom: 25px;
 }
 
 .about__row-text-article-text {	
-	font-size: calc(12px + 4 * ((100vw - 320px) / (1440 - 320)));;
+	font-size: calc(10px + 6 * ((100vw - 320px) / (1440 - 320)));
 	letter-spacing: 1px;
 	line-height: 28px;
 	color: #6e6f6f;
 	font-weight: 400;
 	font-family: $Rale;
-
 	margin-bottom: 42px;
+}
+
+@media (max-width: 767px) {
+	.about {
+		padding: 50px 0;
+	}
+	.about__row-text-article-title {
+		line-height: 20px;
+		margin-bottom: 15px;
+	}	
+	.about__row-text-article-text {	
+		line-height: 20px;
+		margin-bottom: 24px;
+	}
+	.about__row-text {
+		width: 100%;
+	}
+	.about__row {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		padding: 0px auto;
+	}
+	.about__row-image {
+		margin: auto;		
+		width: calc(100.00%);
+		margin-bottom: 20px;
+	}
+}
+
+@media (max-width: 320px) {
+	.about {
+		padding: 30px 0;
+	}
+	.about__row-text-article-title {
+		line-height: 20px;
+		margin-bottom: 15px;
+	}	
+	.about__row-text-article-text {	
+		line-height: 20px;
+		margin-bottom: 24px;
+	}
+	.about__row-image {
+		display: none;
+	}
+	.about__row {
+		padding: 0px;
+	}
 }
