--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -6,7 +6,7 @@
 .footer__title {
     display: flex;
     justify-content: center;
-    font-size: 16px;
+    font-size: calc(12px + 4 * ((100vw - 320px) / (1440 - 320)));
     line-height: 25px;
     color: #ffffff;
     font-family: $Rale;
@@ -42,7 +42,7 @@
     margin-right: 0px;
 }
 
-.fa {
+.footer__row-item .fa {
     color: #aaa;
     transition: .2s;
 }
@@ -50,4 +50,17 @@
 .footer__row-item:hover .fa {
     color: #000;
     transition: .2s;
+}
+
+
+@media (max-width: 767px) {
+    .footer {       
+        padding: 50px 0;
+    }
+}
+
+@media (max-width: 320px) {
+    .footer {       
+        padding: 30px 0;
+    }
 }
