--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -11,30 +11,11 @@
 	padding-bottom: 63px;
 }
 
-@media (max-width: 767px) {
-	.header__container {
-		padding-top: 30px;
-		padding-bottom: 55px;
-    }
-}
-
 .header__logo {
 	display: flex;
 	justify-content: flex-start;
 	margin-bottom: 65px;
 	width: 100%;
-}
-
-@media (max-width: 1019px) {
-	.header__logo {       
-        margin-bottom: 120px;
-    }
-}
-
-@media (max-width: 320px) {
-	.header__logo {       
-        margin-bottom: 70px;
-    }
 }
 
 .header__content {
@@ -51,7 +32,7 @@
 
 .header__title {
 	font-size: 45px;
-	font-size: calc(30px + 15 * ((100vw - 320px) / (1440 - 320)));
+	font-size: calc(24px + 21 * ((100vw - 320px) / (1440 - 320)));
 	letter-spacing: 3px;
 	line-height: 60px;
 	
@@ -70,27 +51,6 @@
 	align-items: center;
 	justify-content: center;
 	margin-top: 124px;
-}
-
-@media (max-width: 1019px) {
-	.header__btn {       
-        margin-top: 84px;
-    }
-}
-
-@media (max-width: 767px) {
-	.header__btn {       
-		margin-top: 50px;
-	}
-	.header__title {		
-		margin-bottom: 15px;
-	}
-}
-
-@media (max-width: 320px) {
-	.header__btn {       
-        margin-top: 34px;
-    }
 }
 
 .header__btn-contact {
@@ -112,25 +72,13 @@
 	transition: .2s;
 }
 
-@media (max-width: 767px) {
-	.header__btn-contact {
-		padding: 10px 26px;
-		font-size: 14px;
-    }
-}
-
-@media (max-width: 320px) {
-	.header__btn-contact {
-		padding: 8px 18px;
-		font-size: 12px;
-    }
-}
-
 .header__decor {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	margin: 180px 0 0 390px;
+	// margin-top: 15.7%;
+	margin-left: 34.2%;
 }
 
 .header__decor-img {
@@ -138,3 +86,82 @@
 	max-height: 100px;	
 }
 
+@media (max-width: 1019px) {
+	.header__logo {       
+        margin-bottom: 120px;
+	}
+	.header__btn {       
+        margin-top: 84px;
+    }
+}
+
+@media (max-width: 1019px) {
+	.header__logo {       
+        margin-bottom: 120px;
+	}
+	.header__btn {       
+        margin-top: 84px;
+    }
+}
+
+@media (max-width: 767px) {
+	.header__logo {
+		margin-bottom: 0;
+	}
+	.header__container {
+		min-height: 570px;
+		padding-top: 63px;
+		padding-bottom: 63px;
+	}
+	.header__btn-contact {
+		padding: 10px 26px;
+		font-size: 14px;
+	}
+	.header__container {
+		padding-top: 30px;
+		padding-bottom: 55px;
+	}
+	.header__btn {       
+		margin-top: 50px;
+	}
+	.header__title {	
+		line-height: 50px;	
+		margin-bottom: 15px;
+	}
+	.header__decor {
+		position: absolute;
+		top: 50%;
+		left: 40%;
+	}
+}
+
+@media (max-width: 320px) {
+	.header__container {
+		min-height: 470px;
+		padding-top: 23px;
+		padding-bottom: 23px;
+	}
+	.header__title {	
+		line-height: 40px;	
+		margin-bottom: 15px;
+	}
+	.header__logo {
+		width: 50%;
+	}
+	.header__btn-contact {
+		padding: 8px 18px;
+		font-size: 12px;
+	}
+	.header__decor-img {
+		max-width: 50px;	
+		max-height: 50px;	
+	}
+	.header__btn {       
+        margin-top: 34px;
+	}
+	.header__decor {
+		position: absolute;
+		top: 30%;
+		left: 40%;
+	}
+}
