--- a/#src/scss/works.scss
+++ b/#src/scss/works.scss
@@ -25,6 +25,8 @@
 	transform: scale(1.2);
 }
 
+
+
 .works__modal {
 	background: rgba(0, 0, 0, 0.7);
 	// background: #000;
@@ -32,8 +34,8 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	opacity: 0;
 	pointer-events: none;
 	transition: .2s;
@@ -67,6 +69,7 @@
 	opacity: 1;
 	transform: translate(-50%, -50%) scale(1);
 	transition: .2s;
+	
 }
 
 @media (max-width: 767px) {
